# harnessed

./: .env.schema.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  VISION.md  all-documentation.md  all-source-code.json  container  harnessed  install.sh  mise.toml  pyproject.toml  remediation-plan.md  remediation-prompt.md  repomix.config.json  uninstall.sh
.claude/: file-suggestion.sh
.planning/: PROJECT.md  RECIPE-ARCHITECTURE-MILESTONE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
base/: Dockerfile.harnessed-base  Dockerfile.harnessed-codex  Dockerfile.harnessed-gemini  Dockerfile.harnessed-omp  Dockerfile.harnessed-opencode  Dockerfile.hatago
docs/: RECIPE-STRESS-TEST.md  comprehensive-development-plan.md  harnessed-design.md  recipe-adoption-gap-analysis.md  recipe-build-findings.md  rig-design.md
lib/: harnessed-claude-config.sh  harnessed-cli.sh  harnessed-common.sh  harnessed-isolated-config.sh  harnessed-isolated.sh  harnessed-mounts.sh  (+6 more)
tools/: Dockerfile  pnpm-workspace.yaml  pyproject.toml
tools/harnessed/: __init__.py  assemble.py  capability.py  cli.py  emit.py  scan.py  schema.py
tools/test-fixtures/recipes/low-recipe/: requirements.txt
tools/test-fixtures/stacks/low-stack/: stack.yaml
tools/test-fixtures/stacks/npm-stack/: stack.yaml
tools/test-fixtures/stacks/svc-stack/: stack.yaml
tools/test-fixtures/stacks/vuln-stack/: stack.yaml
tools/uat/: phase-04.sh  phase-05.sh  phase-06.sh  phase-08.sh  phase-09.sh  run-uat.sh  uat-common.sh
(+316 files in other folders)
