[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessed"
version = "0.1.0"
description = "harnessed — composable AI-coding-harness stacks (host Python CLI driving podman)"
requires-python = ">=3.12"
dependencies = [
    "ruamel.yaml>=0.18,<0.19",
    "rich>=14,<15",
    "pip-audit==2.10.1",
    "typer>=0.12,<1.0",
]

[project.scripts]
harnessed-tools = "harnessed.cli:main"
harnessed = "harnessed.launcher:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["harnessed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
