[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessed-tools"
version = "0.1.0"
description = "harnessed build-time assembler — emit-only (reads recipes/stacks, writes profiles + hatago config)"
requires-python = ">=3.12"
dependencies = [
    "ruamel.yaml>=0.18,<0.19",
    "rich>=14,<15",
]

[project.scripts]
harnessed-tools = "harnessed.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harnessed*"]
